# yummy-cih

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_FLOW_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.docs-viewer  PLAN-phase10b-llm-adapter.md  README.md  ROADMAP.md  SECURITY.md  USAGE.md  docker-compose.poc.yml  docker-compose.yml  package-lock.json  rust-toolchain.toml  setup.bat  setup.sh
crates/cih-community/: Cargo.toml
crates/cih-community/src/: bfs.rs  cohesion.rs  constants.rs  entry_points.rs  graph.rs  label.rs  leiden.rs  leiden_tests.rs  lib.rs  prng.rs  registry.rs  tests.rs
crates/cih-community/src/bfs/: tests.rs
crates/cih-community/src/leiden/: algorithm.rs  algorithm_tests.rs  builder.rs  builder_tests.rs  error.rs  graph_data.rs  graph_data_tests.rs  mod.rs  parallel.rs  parallel_tests.rs  partition.rs  partition_tests.rs  quality.rs  quality_tests.rs  runner.rs  runner_tests.rs  tests.rs
crates/cih-community/src/leiden_impl/: algorithm.rs  algorithm_tests.rs  builder.rs  builder_tests.rs  graph_data.rs  graph_data_tests.rs  leiden.rs  leiden_tests.rs  mod.rs  move_components.rs  parallel.rs  parallel_tests.rs  partition.rs  quality.rs  quality_tests.rs
crates/cih-community/src/registry/: tests.rs
crates/cih-community/tests/: bfs.rs  community.rs
crates/cih-core/: Cargo.toml
crates/cih-core/src/: artifacts.rs  entrypoints.rs  entrypoints_tests.rs  group.rs  ir.rs  lib.rs  registry.rs  repo_map.rs  tests.rs
crates/cih-core/src/group/: tests.rs
crates/cih-core/src/registry/: tests.rs
crates/cih-core/tests/: core.rs  group.rs  registry.rs
crates/cih-embed/: Cargo.toml
crates/cih-embed/src/: chunker.rs  lib.rs  model.rs  store.rs  strip.rs  tests.rs  text.rs
crates/cih-embed/src/strip/: tests.rs
crates/cih-embed/tests/: embed.rs  strip.rs
crates/cih-engine/: Cargo.toml
crates/cih-engine/src/: analyze.rs  config_cmd.rs  db.rs  decompile.rs  decompile_config.rs  discover.rs  embed.rs  feature_strategy.rs  features_cmd.rs  file_cache.rs  group.rs  group_cmd.rs  group_sync.rs  grouping.rs  lib.rs  main.rs  node_prefix.rs  registry.rs  runtime.rs  scan.rs  scope.rs  settings.rs  start.rs  start_env.rs  taint_cmd.rs  taint_config.rs  taint_config_tests.rs  tests.rs  tui.rs  ui.rs  versioning.rs  wiki_cmd.rs
crates/cih-engine/src/analyze/: augmentors.rs  cache.rs  extract.rs  merge.rs  merge_tests.rs  mod.rs
crates/cih-engine/src/cmd/: analyze.rs  args.rs  artifact.rs  config.rs  discover.rs  features.rs  group.rs  group_sync.rs  list.rs  mod.rs  refresh.rs  start.rs  start_env.rs  (+3 more)
crates/cih-engine/tests/: aop_corpus.rs  corpus_coverage.rs  crate_tests.rs  file_cache.rs  group_sync.rs  llm.rs  llm_evidence.rs  llm_grouping.rs  llm_http_json.rs  parse_schema_guard.rs  scan.rs  scan_build_files.rs  scan_ignore_rules.rs  scan_jars.rs  scan_java_scan.rs  scope.rs  start.rs  start_env.rs  wiki_cmd.rs
crates/cih-falkor/: Cargo.toml
crates/cih-falkor/examples/: load_sample.rs  load_test.rs  query_bench.rs
crates/cih-falkor/src/: bulk.rs  lib.rs  lib_tests.rs  query.rs  serialize.rs  tests.rs
crates/cih-falkor/tests/: falkor.rs  falkor_integration.rs
crates/cih-graph-store/: Cargo.toml
crates/cih-graph-store/src/: contract.rs  lib.rs
crates/cih-jar/: Cargo.toml
crates/cih-jar/src/: lib.rs  tests.rs
crates/cih-jar/tests/: jar.rs
crates/cih-ladybug/: Cargo.toml  build.rs
crates/cih-ladybug/src/: bulk.rs  convert.rs  lib.rs  query.rs  schema.rs
crates/cih-ladybug/tests/: contract.rs
crates/cih-lang/: Cargo.toml
crates/cih-lang/src/: constant_resolver.rs  contracts_common.rs  fingerprint.rs  generic_parse.rs  lib.rs
crates/cih-lang/tests/: go.rs  go_idioms.rs  java.rs  java_idioms.rs  kotlin.rs  kotlin_idioms.rs  python.rs  python_idioms.rs  python_parse.rs  typescript.rs  typescript_idioms.rs
crates/cih-parse/: Cargo.toml
crates/cih-parse/src/: java.rs  lib.rs  sql.rs  tests.rs
crates/cih-parse/tests/: edge_emit.rs  java_parse.rs  sql.rs  sql_detection.rs
crates/cih-resolve/: Cargo.toml
crates/cih-resolve/src/: augment.rs  complexity.rs  confidence.rs  constant_propagation.rs  contracts.rs  db_access.rs  di_xml.rs  emit.rs  index.rs  inheritance.rs  integration_xml.rs  lib.rs  patterns.rs  reports.rs  similarity.rs  tests.rs  types.rs
crates/cih-resolve/tests/: db_access.rs  di_xml.rs  inheritance.rs  integration_xml.rs  resolve.rs
crates/cih-server/: Cargo.toml
crates/cih-server/examples/: artifact_load_bench.rs  scale_bench.rs  soak_bench.rs
crates/cih-server/src/: agent.rs  app.rs  app_error.rs  args.rs  artifact_cache.rs  blocking.rs  bootstrap.rs  browser.rs  changes.rs  config.rs  contracts.rs  coverage.rs  feature.rs  files.rs  indexing.rs  jobs.rs  layout.rs  layout_tests.rs  lib.rs  main.rs  mtime_cache.rs  overview.rs  patterns.rs  repo_context.rs  resources.rs  scale_bench.rs  search.rs  server.rs  single_flight.rs  startup.rs  symbol.rs  taint.rs  tests.rs  utils.rs  viz.rs  wiki.rs  xflow.rs
crates/cih-server/tests/: architecture_boundaries.rs  args.rs  browser.rs  search.rs  viz.rs  wiki.rs
crates/cih-store-factory/: Cargo.toml
crates/cih-store-factory/src/: lib.rs
crates/cih-taint/: Cargo.toml
crates/cih-taint/src/: analyzer.rs  cfg.rs  confidence.rs  config.rs  config_tests.rs  error.rs  flow_sensitive.rs  interproc.rs  ir.rs  java_ast.rs  java_ir.rs  lib.rs  liveness.rs  pass.rs  pdg.rs  phase1.rs  queue.rs  rules.rs  taint3.rs
crates/cih-taint/tests/: cfg.rs  flow_sensitive.rs  interproc.rs  java_ir.rs  liveness.rs  pdg.rs
crates/cih-wiki/: Cargo.toml
crates/cih-wiki/src/: bodies.rs  enrich_maps.rs  features.rs  graph.rs  html.rs  lib.rs  lib_tests.rs  manifest.rs  mermaid.rs  module_tree.rs  render.rs  resident.rs  sink.rs  slugify.rs  tests.rs
crates/cih-wiki/tests/: features.rs  graph.rs  html.rs  manifest.rs  mermaid.rs  module_tree.rs  pages_ba.rs  pages_dev.rs  pages_feature_ba.rs  pages_feature_index.rs  pages_feature_po.rs  pages_po.rs  pages_shared.rs  pages_system_index.rs  resident_parity.rs  slugify.rs  wiki.rs
(+512 files in other folders)
