# CIH — Code Intelligence Hub (Rust engine + MCP service)
# Milestone 1 scaffold: rmcp+axum MCP server with a pluggable GraphStore (FalkorDB adapter).
[workspace]
resolver = "2"
members = [
  "crates/cih-core",
  "crates/cih-engine",
  "crates/cih-lang",
  "crates/cih-parse",
  "crates/cih-resolve",
  "crates/cih-jar",
  "crates/cih-community",
  "crates/cih-search",
  "crates/cih-embed",
  "crates/cih-graph-store",
  "crates/cih-falkor",
  "crates/cih-server",
  "crates/cih-wiki",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
streaming-iterator = "0.1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
blake3 = "1"
globset = "0.4"
ignore = "0.4"
once_cell = "1"
quick-xml = "0.38"
rayon = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tree-sitter = "0.24"
tree-sitter-java = "0.23.5"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.27", features = ["tokio-comp"] }
cafebabe = "0.9"
zip = { version = "8", default-features = false, features = ["deflate"] }
petgraph = "0.6"
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub-native-tls"] }
tokio-postgres = "0.7"
pgvector = { version = "0.4", features = ["postgres"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# internal crates
cih-core = { path = "crates/cih-core" }
cih-engine = { path = "crates/cih-engine" }
cih-lang = { path = "crates/cih-lang" }
cih-parse = { path = "crates/cih-parse" }
cih-resolve = { path = "crates/cih-resolve" }
cih-jar = { path = "crates/cih-jar" }
cih-community = { path = "crates/cih-community" }
cih-search = { path = "crates/cih-search" }
cih-embed = { path = "crates/cih-embed" }
cih-graph-store = { path = "crates/cih-graph-store" }
cih-falkor = { path = "crates/cih-falkor" }
cih-wiki = { path = "crates/cih-wiki" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
