[package]
name = "cih-community"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["rayon"]
rayon = []
serde = []

[dependencies]
cih-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
petgraph.workspace = true
rayon.workspace = true
rand.workspace = true
rustc-hash = "2"
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

