[package]
name = "cih-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
toml.workspace = true
tracing.workspace = true
zstd.workspace = true
