[package]
name = "cih-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cih-engine"
path = "src/main.rs"

[dependencies]
cih-core.workspace = true
cih-community.workspace = true
cih-embed.workspace = true
cih-falkor.workspace = true
cih-jar.workspace = true
cih-graph-store.workspace = true
cih-parse.workspace = true
cih-resolve.workspace = true
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
globset.workspace = true
ignore.workspace = true
quick-xml.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true
