[package]
name = "cih-falkor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cih-core.workspace = true
cih-graph-store.workspace = true
async-trait.workspace = true
redis.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
tokio.workspace = true   # sync::{OnceCell, Semaphore} + time::timeout for pooling/backpressure
