[package]
name = "cih-graph-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cih-core.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_json = { workspace = true, optional = true }

[features]
# Backend contract suite (`contract::run_contract_suite`) — adapter test code,
# not for production builds.
test-support = ["dep:serde_json"]
