[package]
name = "cih-jar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cih-core.workspace = true
anyhow.workspace = true
cafebabe.workspace = true
zip.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
zip.workspace = true
