[package]
name = "cih-lang"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cih-core.workspace = true
serde_json.workspace = true
once_cell.workspace = true
streaming-iterator.workspace = true
tree-sitter.workspace = true
tree-sitter-java.workspace = true
