[package]
name = "cih-lang"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cih-core.workspace = true
serde_json.workspace = true
once_cell.workspace = true
streaming-iterator.workspace = true
tree-sitter.workspace = true
tree-sitter-java.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-kotlin-updated.workspace = true
tree-sitter-go.workspace      = true
tree-sitter-rust.workspace    = true
tree-sitter-c-sharp.workspace = true
tree-sitter-ruby.workspace    = true
tree-sitter-php.workspace     = true
tree-sitter-cpp.workspace     = true
tree-sitter-scala.workspace   = true
tree-sitter-elixir.workspace  = true
tree-sitter-bash.workspace    = true
