[package]
name = "cih-parse"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cih-core.workspace = true
cih-lang.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
streaming-iterator.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
