[package]
name = "cih-resolve"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cih-core.workspace = true
cih-lang.workspace = true
cih-parse.workspace = true
cih-patterns.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
quick-xml.workspace = true
ignore.workspace = true
rayon.workspace = true
tracing.workspace = true
