[package]
name = "cih-taint"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cih-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-java.workspace = true

[dev-dependencies]
serde_json.workspace = true
