[package]
name = "cih-wiki"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cih-core.workspace = true
cih-lang.workspace = true
cih-grouping.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
# Self-referential resident render state (owner → WikiInput → RenderContext) for
# P3.8 live serving: build the graph + ctx + index once, serve pages sub-ms.
ouroboros = "0.18"
